--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -1,28 +1,44 @@
 <div class="container">
-    <img [src]="event?.imageUrl" [alt]="event?.name" class="event-image">
-  
-    <div class="row">
-      <div class="col-md-11">
-        <h2>{{event?.name}} </h2>
-      </div>
+  <img [src]="event?.imageUrl" [alt]="event?.name" class="event-image">
+
+  <div class="row">
+    <div class="col-md-11">
+      <h2>{{event?.name}} </h2>
     </div>
-  
-    <div class="row">
-      <div class="col-md-6">
-        <div><strong>Date:</strong> {{event?.date}}</div>
-        <div><strong>Time:</strong> {{event?.time}}</div>
-        <div><strong>Price:</strong> ${{event?.price}}</div>
-      </div>
-      <div class="col-md-6">
-        <address *ngIf="event?.location">
-          <strong>Address:</strong><br />
-          {{event?.location?.address}}<br />
-          {{event?.location?.city}}, {{event?.location?.country}}
-        </address>
-        <div *ngIf="event?.onlineUrl">
-            <strong>Online url:</strong><br />
-            {{event?.onlineUrl}}
-        </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <div><strong>Date:</strong> {{event?.date}}</div>
+      <div><strong>Time:</strong> {{event?.time}}</div>
+      <div><strong>Price:</strong> ${{event?.price}}</div>
+    </div>
+    <div class="col-md-6">
+      <address *ngIf="event?.location">
+        <strong>Address:</strong><br />
+        {{event?.location?.address}}<br />
+        {{event?.location?.city}}, {{event?.location?.country}}
+      </address>
+      <div *ngIf="event?.onlineUrl">
+        <strong>Online url:</strong><br />
+        {{event?.onlineUrl}}
       </div>
     </div>
   </div>
+
+  <hr />
+  <div class="row">
+    <div class="col-md-2">
+      <h3 style="margin: 0;">
+        Sessions:
+      </h3>
+    </div>
+    <div class="col-md-2" style="float: right;">
+      <button class="btn-primary" (click)="addSession()">
+        Add Session
+      </button>
+    </div>
+  </div>
+  <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+  <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelNewSession)="cancelNewSession()"></create-session>
+</div>
