--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,8 +1,8 @@
 <div [routerLink]="['/events',event.id]" class="well hoverwell thumbnail">
-    <h3>{{event.name}}</h3>
-    <div>Date: {{event.date}}</div>
+    <h3>{{event.name | uppercase}}</h3>
+    <div>Date: {{event.date | date:'shortDate'}}</div>
     <div>Time: {{event.time}}</div>
-    <div>Price: {{event.price}}</div>
+    <div>Price: {{event.price | currency:'INR'}}</div>
     <div *ngIf="event.location">
         <span>Location: {{event.location.address}}</span>
         <span>&nbsp;</span>
