--- a/src/app/common/simple-modal/simple-modal.component.html
+++ b/src/app/common/simple-modal/simple-modal.component.html
@@ -1,4 +1,4 @@
-<div id="simple-modal" class="modal fade" tabindex="-1">
+<div id="{{elementId}}" #modalContainer class="modal fade" tabindex="-1">
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal">
@@ -6,7 +6,7 @@
       </button>
       <h4 class="modal-title">{{title}}</h4>
     </div>
-    <div class="modal-body">
+    <div class="modal-body" (click)="closeModal()">
       <ng-content></ng-content>
     </div>
   </div>
