--- a/src/app/events/create-event.component.html
+++ b/src/app/events/create-event.component.html
@@ -22,10 +22,11 @@
       <em *ngIf="newEventForm.controls.price?.invalid && (newEventForm.controls.price?.touched)">Required</em>
       <input (ngModel)="newEvent.price" name="price" required id="eventPrice" type="text" type="number" class="form-control" placeholder="event price..." />
     </div>
-    
-    <div ngModelGroup="location">
+
+    <div ngModelGroup="location" #locationRef="ngModelGroup" validateLocation>
         <div class="form-group">
           <label for="address">Event Location:</label>
+          <em *ngIf="locationRef?.invalid && locationRef?.touched">Event location or online URL required.</em>
           <input (ngModel)="newEvent.address" name="address" id="address" type="text" class="form-control" placeholder="Address of event..." />
         </div>
         <div class="row">
@@ -40,7 +41,8 @@
 
     <div class="form-group">
       <label for="onlineUrl">Online Url:</label>
-      <input (ngModel)="newEvent.onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..." />
+      <input (ngModel)="newEvent.onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..."
+              (change)="locationRef?.control.controls.address.updateValueAndValidity()" />
     </div>
     <div class="form-group" [ngClass]="{'error': newEventForm.controls.imageUrl?.invalid && newEventForm.controls.imageUrl?.touched}">
       <label for="imageUrl">Image:</label>
@@ -49,7 +51,7 @@
       <input (ngModel)="newEvent.imageUrl" name="imageUrl" required pattern=".*\/.*.(png|jpg)" id="imageUrl" type="text" class="form-control" placeholder="url of image..." />
       <img [src]="newEventForm.controls.imageUrl?.value" *ngIf="newEventForm.controls.imageUrl?.value" />
     </div>
-    
+
     <button type="submit" [disabled]="newEventForm.invalid" class="btn btn-primary">Save</button>
     <button type="button"  class="btn btn-default" (click)="handleCancelEvent()">Cancel</button>
   </form>
