Module 14 working with https code implementations.

--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -62,7 +62,7 @@
       </button>
     </div>
   </div>
-  <session-list *ngIf="!addMode" [sessions]="event?.sessions" [filterBy]="filterBy" [sortBy]="sortBy"></session-list>
+  <session-list *ngIf="!addMode" [evendId]="event?.id" [sessions]="event?.sessions" [filterBy]="filterBy" [sortBy]="sortBy"></session-list>
   <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelNewSession)="cancelNewSession()">
   </create-session>
 </div>
