--- a/src/app/user/login.component.html
+++ b/src/app/user/login.component.html
@@ -4,14 +4,14 @@
   <form #loginForm="ngForm" (ngSubmit)="onFormSubmit(loginForm.value)" autocomplete="off" novalidate>
     <div class="form-group">
       <label for="userName">User Name:</label>
-      <em *ngIf="loginForm.controls.userName?.invalid && 
+      <em *ngIf="loginForm.controls.userName?.invalid &&
                   (loginForm.controls.userName?.touched || mouseOverLogin)">Invalid</em>
       <input id="userName" (ngModel)="userName" name="userName" type="text" class="form-control"
         placeholder="User Name..." required />
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
-      <em *ngIf="loginForm.controls.password?.invalid && 
+      <em *ngIf="loginForm.controls.password?.invalid &&
                   (loginForm.controls.password?.touched || mouseOverLogin)">Invalid</em>
       <input id="password" (ngModel)="password" name="password" type="password" class="form-control"
         placeholder="Password..." required />
@@ -22,6 +22,8 @@
     </span>
     <button type="button" (click)="handleCancel()" class="btn btn-default">Cancel</button>
   </form>
+  <br>
+  <div *ngIf="loginInvalid" class="alert alert-danger">Invalid Login Info.</div>
 </div>
 
 <label>invalid value: [{{loginForm.invalid}}]</label><br />
